## GPareto 1.1.2

## change / GPareto 1.1.1
  * vectorized crit_EHI thanks to David Gaudrie
  * vectorized checkPredict function, with additional 'none' option

## GPareto 1.1.1

## change / GPareto 1.1.0
  * improve 3D Pareto front representation with rgl
  * no more transpose with predict_kms
  * checkPredict use light option

## change / GPareto 1.0.3
  * easyGParetoptim and GParetoptim now allow noisy objectives, with the noise.var argument
  * resolve inconsistency with integration.points in GParetoptim
  * use faster options of predict.km when possible, predict_kms function to predict on a list of models
  * n.steps.remaining now is an element of crit_control
  * arguments for check_predict only in crit_control for all functions
  * EMI is now computed using the semi-analytical formula for 2 objectives (if the range of objective is small enough, for stability)
  * quietly load KrigInv in the vignette to solve rebuilding issues
  * warnings from genoud are suppressed unless trace is high enough

## change / GPareto 1.0.2
  * update the vignette
  * changes in checkPredict for matrix/vector arithmetics

## change / GPareto 1.0.1
  * new function 'easyGParetoptim', a user-friendly wrapper of the function 'GParetoptim' with arguments as the base optim method
  * change arguments 'fun' and 'cheapfun' of 'GParetoptim' and 'crit_optimizer' to 'fn' and 'cheapfn' to match arguments of 'optim' and 'easyGParetoptim'
  * new function 'getDesign', to get the best design corresponding to a given target
  * new function 'plotGPareto' to display the result of an optimization, possibly quantifiying the uncertainty on it
  * a random point is selected with GParetoptim is the inner optimization of the criterion failed by returning an already known point
  * no more messages about refPoints when trace is 0
  * bug corrected in crit_SMS with eps
  * bug corrected with seed for genoud and for EHI, EMI
  * bug corrected for SUR
  * correct bug in automatic refPoint selection