@@ -3,6 +3,7 @@
 ## change / GPareto 1.1.1
   * vectorized crit_EHI thanks to David Gaudrie
   * vectorized checkPredict function, with additional 'none' option
+  * checkPredict new default is "euclidean" for speed
 
 ## GPareto 1.1.1
 
